<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#3c4953"
    tools:context=".BluemixSending" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="Module Cloud Sample App"
        android:gravity="center"
        android:layout_weight="1"
        android:textColor="#e5ffffff"
        android:textSize="20sp"
        android:background="#2d3840" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="10.3"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <EditText
            android:id="@+id/BmOrg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Organization"
            android:text="@string/bm_org_str"
            android:singleLine="true"
            android:background="@drawable/txt_field_n"
            android:textColor="#e5ffffff" />

        <EditText
            android:id="@+id/BmType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Type"
            android:text="@string/bm_type_str"
            android:singleLine="true"
            android:background="@drawable/txt_field_n"
            android:textColor="#e5ffffff"
            android:layout_marginTop="3dp" />

        <EditText
            android:id="@+id/BmID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Device ID"
            android:text="@string/bm_id_str"
            android:singleLine="true"
            android:background="@drawable/txt_field_n"
            android:textColor="#e5ffffff"
            android:layout_marginTop="3dp" />

        <EditText
            android:id="@+id/BmAuthMethod"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Authorization Method"
            android:text="@string/bm_authmethod_str"
            android:singleLine="true"
            android:background="@drawable/txt_field_n"
            android:textColor="#e5ffffff"
            android:layout_marginTop="3dp" />

        <EditText
            android:id="@+id/BmAuthToken"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Authorization Token"
            android:text="@string/bm_authtoken_str"
            android:singleLine="true"
            android:background="@drawable/txt_field_n"
            android:textColor="#e5ffffff"
            android:layout_marginTop="3dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="sendbluemixsetting"
            android:text="Send Bluemix Setting"
            android:background="@drawable/btn_submit_du"
            android:textColor="#e5ffffff"
            android:textSize="16sp"
            android:layout_marginTop="3dp" />

        <Spinner
            android:id="@+id/interface_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/interface_array"
            android:layout_marginTop="3dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="sendinterfacesetting"
            android:text="Send Interface Setting"
            android:background="@drawable/btn_submit_du"
            android:textColor="#e5ffffff"
            android:textSize="16sp"
            android:layout_marginTop="3dp" />

        <Spinner
            android:id="@+id/log_trigger_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/trigger_array"
            android:layout_marginTop="3dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="sendlogtriggerstatus"
            android:text="Send Log Trigger Status"
            android:background="@drawable/btn_submit_du"
            android:textColor="#e5ffffff"
            android:textSize="16sp"
            android:layout_marginTop="3dp" />

    </LinearLayout>

</LinearLayout>

